# test-framework

./: .gitignore  README  README.textile  THANKS  TODO  import_wiki.lhs  index.html  release  test-framework.cabal
Test/: Framework.hs
Test/Framework/: Core.hs  Example.lhs  Improving.hs  Options.hs  Processors.hs  QuickCheck.hs  Seed.hs  Tests.hs  ThreadPool.hs  TimeoutIO.hs  Utilities.hs
Test/Framework/Providers/: API.hs  HUnit.hs  QuickCheck.hs
Test/Framework/Runners/: Console.hs  Core.hs  Options.hs  Processors.hs  TestPattern.hs  ThreadPool.hs  TimedConsumption.hs
Test/Framework/Runners/Console/: Colors.hs  ProgressBar.hs  Statistics.hs  Table.hs  Utilities.hs
Test/Framework/Tests/: ThreadPool.hs
core/: .ghci  README.textile  test-framework.cabal
core/Test/: Framework.hs
core/Test/Framework/: Core.hs  Improving.hs  Options.hs  Tests.hs  Utilities.hs
core/Test/Framework/Providers/: QuickCheck.hs
core/Test/Framework/Runners/: API.hs  Common.hs  Console.hs  Core.hs  Options.hs  Statistics.hs  ThreadPool.hs  TimedConsumption.hs  XML.hs
core/Test/Framework/Runners/Console/: Run.hs  Statistics.hs  Utilities.hs
core/Test/Framework/Runners/XML/: HostName.hs  JUnitWriter.hs
core/Test/Framework/Tests/Runners/: ThreadPool.hs  XMLTests.hs
example/: README.textile  test-framework-example.cabal
example/Test/Framework/: Example.lhs
hunit/: README.textile  test-framework-hunit.cabal
hunit/Test/Framework/Providers/: HUnit.hs
quickcheck/: README.textile  test-framework-quickcheck.cabal
quickcheck/Test/Framework/Providers/: QuickCheck.hs
quickcheck2/: README.textile  test-framework-quickcheck2.cabal
quickcheck2/Test/Framework/Providers/: QuickCheck2.hs
