Name:           test-framework
Version:        0.1
Cabal-Version:  >= 1.2
Category:       Testing
Synopsis:       Framework for running and organising tests, with HUnit and QuickCheck support
Description:    Allows QuickCheck properties and HUnit test cases to be assembled into test groups, run in parallel (but reported
                in deterministic order, to aid diff interpretation) and filtered and controlled by command line options.
                All of this comes with colored test output, progress reporting and test statistics output.
License:        BSD3
License-File:   LICENSE
Author:         Max Bolingbroke
Maintainer:     batterseapower@hotmail.com
Homepage:       http://bsp.lighthouseapp.com/projects/15661-hs-test-framework/overview
Build-Type:     Simple

Flag SplitBase
        Description:    Choose the new smaller, split-up base package
        Default:        True

Flag Tests
        Description:    Build the tests
        Default:        False

Flag Example
        Description:    Build the example testsuite
        Default:        False

Flag HUnit
        Description:    Enable HUnit integration
        Default:        True

Flag QuickCheck
        Description:    Enable QuickCheck integration
        Default:        True


Library
        Exposed-Modules:        Test.Framework
                                Test.Framework.Options
                                Test.Framework.Runners.Console
                                Test.Framework.Runners.Options
                                Test.Framework.Seed
        
        Other-Modules:          Test.Framework.Core
                                Test.Framework.Improving
                                Test.Framework.Processors
                                Test.Framework.Runners.Console.ProgressBar
                                Test.Framework.Runners.Console.Statistics
                                Test.Framework.Runners.Console.Table
                                Test.Framework.Runners.Console.Utilities
                                Test.Framework.Runners.Core
                                Test.Framework.Runners.TestPattern
                                Test.Framework.ThreadPool
                                Test.Framework.Utilities
        
        if flag(quickcheck)
                Build-Depends:  QuickCheck >= 1.1
                Other-Modules:  Test.Framework.Providers.QuickCheck
        
        if flag(hunit)
                Build-Depends:  HUnit >= 1.2
                Other-Modules:  Test.Framework.Providers.HUnit
        
        Build-Depends:          ansi-terminal >= 0.2.1, ansi-wl-pprint >= 0.2, regex-posix >= 0.72
        if flag(splitBase)
                Build-Depends:  base >= 3, random >= 1.0, containers >= 0.1
        else
                Build-Depends:  base < 3
        
        Extensions:             CPP
                                PatternGuards
                                ExistentialQuantification
                                RecursiveDo
                                FlexibleInstances
                                TypeSynonymInstances
                                TypeOperators
                                FunctionalDependencies
                                MultiParamTypeClasses
        
        Ghc-Options:            -Wall
        
        if impl(ghc)
                Cpp-Options:    -DCOMPILER_GHC

Executable test-framework-tests
        Main-Is:                Test/Framework/Tests.hs

        Build-Depends:          QuickCheck >= 1.1, HUnit >= 1.2, ansi-terminal >= 0.2.1, ansi-wl-pprint >= 0.2, regex-posix >= 0.72
        if flag(splitBase)
                Build-Depends:  base >= 3, random >= 1.0, containers >= 0.1
        else
                Build-Depends:  base < 3
        
        Extensions:             CPP
                                PatternGuards
                                ExistentialQuantification
                                RecursiveDo
                                FlexibleInstances
                                TypeSynonymInstances
                                TypeOperators
                                FunctionalDependencies
                                MultiParamTypeClasses
        
        Ghc-Options:            -Wall -threaded
        
        if impl(ghc)
                Cpp-Options:    -DCOMPILER_GHC
        
        if !flag(tests)
                Buildable:      False

Executable test-framework-example
        Main-Is:                Test/Framework/Example.lhs

        Build-Depends:          QuickCheck >= 1.1, HUnit >= 1.2, ansi-terminal >= 0.2.1, ansi-wl-pprint >= 0.2, regex-posix >= 0.72
        if flag(splitBase)
                Build-Depends:  base >= 3, random >= 1.0, containers >= 0.1
        else
                Build-Depends:  base < 3
        
        Extensions:             CPP
                                PatternGuards
                                ExistentialQuantification
                                RecursiveDo
                                FlexibleInstances
                                TypeSynonymInstances
                                TypeOperators
                                FunctionalDependencies
                                MultiParamTypeClasses
        
        Ghc-Options:            -threaded
        
        if impl(ghc)
                Cpp-Options:    -DCOMPILER_GHC
        
        if !flag(example)
                Buildable:      False