Name:                test-framework
Version:             0.8.0.2
Cabal-Version:       >= 1.6
Category:            Testing
Synopsis:            Framework for running and organising tests, with HUnit and QuickCheck support
Description:         Allows tests such as QuickCheck properties and HUnit test cases to be assembled into test groups, run in
                     parallel (but reported in deterministic order, to aid diff interpretation) and filtered and controlled by
                     command line options. All of this comes with colored test output, progress reporting and test statistics output.
License:             BSD3
License-File:        LICENSE
Author:              Max Bolingbroke <batterseapower@hotmail.com>
Maintainer:          Libraries List <libraries@haskell.org>
Homepage:            https://batterseapower.github.io/test-framework/
Bug-Reports:         https://github.com/haskell/test-framework/issues/
Build-Type:          Simple

Flag Tests
        Description:    Build the tests
        Default:        False


Library
        Exposed-Modules:        Test.Framework
                                Test.Framework.Options
                                Test.Framework.Providers.API
                                Test.Framework.Runners.Console
                                Test.Framework.Runners.Options
                                Test.Framework.Runners.TestPattern
                                Test.Framework.Runners.API
                                Test.Framework.Seed

        Other-Modules:          Test.Framework.Core
                                Test.Framework.Improving
                                Test.Framework.Runners.Console.Colors
                                Test.Framework.Runners.Console.ProgressBar
                                Test.Framework.Runners.Console.Run
                                Test.Framework.Runners.Console.Statistics
                                Test.Framework.Runners.Console.Table
                                Test.Framework.Runners.Console.Utilities
                                Test.Framework.Runners.Core
                                Test.Framework.Runners.Processors
                                Test.Framework.Runners.Statistics
                                Test.Framework.Runners.ThreadPool
                                Test.Framework.Runners.TimedConsumption
                                Test.Framework.Runners.XML.JUnitWriter
                                Test.Framework.Runners.XML
                                Test.Framework.Utilities

        Build-Depends:          ansi-terminal >= 0.4.0, ansi-wl-pprint >= 0.5.1,
                                base >= 4.3 && < 5, random >= 1.0, containers >= 0.1,
                                regex-posix >= 0.72,
                                old-locale >= 1.0, time >= 1.1.2,
                                xml >= 1.3.5, hostname >= 1.0

        Extensions:             CPP
                                PatternGuards
                                ExistentialQuantification
                                RecursiveDo
                                FlexibleInstances
                                TypeSynonymInstances
                                TypeOperators
                                FunctionalDependencies
                                MultiParamTypeClasses

        Ghc-Options:            -Wall

        if impl(ghc)
                Cpp-Options:            -DCOMPILER_GHC

Executable test-framework-tests
        Main-Is:                Test/Framework/Tests.hs

        if !flag(tests)
                Buildable:              False
        else
                Build-Depends:          HUnit >= 1.2, QuickCheck >= 2.3 && < 2.5,
                                        base >= 4.3 && < 5, random >= 1.0, containers >= 0.1,
                                        ansi-terminal >= 0.4.0, ansi-wl-pprint >= 0.5.1,
                                        regex-posix >= 0.72,
                                        old-locale >= 1.0, time >= 1.1.2,
                                        xml >= 1.3.5, hostname >= 1.0,
                                        libxml >= 0.1.1, bytestring >= 0.9

                Extensions:             CPP
                                        PatternGuards
                                        ExistentialQuantification
                                        RecursiveDo
                                        FlexibleInstances
                                        TypeSynonymInstances
                                        TypeOperators
                                        FunctionalDependencies
                                        MultiParamTypeClasses

                Cpp-Options:            -DTEST

                Ghc-Options:            -Wall -threaded

                if impl(ghc)
                        Cpp-Options:            -DCOMPILER_GHC

Source-Repository head
  Type:     git
  Location: https://github.com/haskell/test-framework
