Name:                test-framework-example
Version:             0.2.0
Cabal-Version:       >= 1.2
Category:            Testing
Synopsis:            Example testsuite for the test-framework package
License:             BSD3
License-File:        LICENSE
Extra-Source-Files:  README.textile
Author:              Max Bolingbroke
Maintainer:          batterseapower@hotmail.com
Homepage:            http://github.com/batterseapower/test-framework
Build-Type:          Simple

Flag SplitBase
        Description:    Choose the new smaller, split-up base package
        Default:        True


Executable test-framework-example
        Main-Is:                Test/Framework/Example.lhs

        Build-Depends:          test-framework >= 0.2.0,
                                test-framework-quickcheck >= 0.2.0, QuickCheck >= 1.1 && < 2,
                                test-framework-hunit >= 0.2.0, HUnit >= 1.2 && < 2
        if flag(splitBase)
                Build-Depends:          base >= 3
        else
                Build-Depends:          base < 3
        
        Ghc-Options:            -threaded