Name:                test-framework-hunit
Version:             0.2.7
Cabal-Version:       >= 1.2.3
Category:            Testing
Synopsis:            HUnit support for the test-framework package.
License:             BSD3
License-File:        LICENSE
Author:              Max Bolingbroke <batterseapower@hotmail.com>
Maintainer:          Max Bolingbroke <batterseapower@hotmail.com>
Homepage:            http://batterseapower.github.com/test-framework/
Build-Type:          Simple

Flag Base4
        Description:    Choose base version 4
        Default:        True

Flag Base3
        Description:    Choose base version 3
        Default:        False


Library
        Exposed-Modules:        Test.Framework.Providers.HUnit

        Build-Depends:          test-framework >= 0.2.0, HUnit >= 1.2 && < 2, extensible-exceptions >= 0.1.1 && < 0.2.0
        if flag(base3)
                Build-Depends:          base >= 3 && < 4
        else
                if flag(base4)
                        Build-Depends:          base >= 4 && < 5

        Extensions:             TypeOperators
                                MultiParamTypeClasses

        Ghc-Options:            -Wall