Name:                test-framework-quickcheck2
Version:             0.2.11
Cabal-Version:       >= 1.2.3
Category:            Testing
Synopsis:            QuickCheck2 support for the test-framework package.
License:             BSD3
License-File:        LICENSE
Author:              Max Bolingbroke <batterseapower@hotmail.com>
Maintainer:          Max Bolingbroke <batterseapower@hotmail.com>
Homepage:            http://batterseapower.github.com/test-framework/
Build-Type:          Simple

Flag Base4
        Description:    Choose base version 4
        Default:        True

Flag Base3
        Description:    Choose base version 3
        Default:        False


Library
        Exposed-Modules:        Test.Framework.Providers.QuickCheck2

        Build-Depends:          test-framework >= 0.2.0 && < 0.5.0, QuickCheck >= 2.4 && < 2.5, extensible-exceptions >= 0.1.1 && < 0.2.0
        if flag(base3)
                Build-Depends:          base >= 3 && < 4, random >= 1
        else
                if flag(base4)
                        Build-Depends:          base >= 4 && < 5, random >= 1

        Extensions:             TypeSynonymInstances
                                TypeOperators
                                MultiParamTypeClasses
                                ExistentialQuantification

        Ghc-Options:            -Wall