Name:                test-framework-quickcheck2
Version:             0.3.0.2
Cabal-Version:       >= 1.6
Category:            Testing
Synopsis:            QuickCheck2 support for the test-framework package.
License:             BSD3
License-File:        LICENSE
Author:              Max Bolingbroke <batterseapower@hotmail.com>
Maintainer:          Haskell Libraries <libraries@haskell.org>
Homepage:            https://batterseapower.github.io/test-framework/
Bug-Reports:         https://github.com/haskell/test-framework/
Build-Type:          Simple
Description:         QuickCheck2 support for the test-framework package.

Flag Base4
        Description:    Choose base version 4
        Default:        True

Flag Base3
        Description:    Choose base version 3
        Default:        False


Library
        Exposed-Modules:        Test.Framework.Providers.QuickCheck2

        Build-Depends:          test-framework >= 0.7.1, QuickCheck >= 2.4 && < 2.7, extensible-exceptions >= 0.1.1 && < 0.2.0
        if flag(base3)
                Build-Depends:          base >= 3 && < 4, random >= 1
        else
                if flag(base4)
                        Build-Depends:          base >= 4 && < 5, random >= 1

        Extensions:             TypeSynonymInstances
                                TypeOperators
                                MultiParamTypeClasses
                                ExistentialQuantification
                                CPP

        Ghc-Options:            -Wall

Source-Repository head
  Type:     git
  Location: https://github.com/haskell/test-framework
